--- a/_posts/2019-01-17-[BZOJ3730]震波.md
+++ b/_posts/2019-01-17-[BZOJ3730]震波.md
@@ -15,11 +15,14 @@ tags:
 ### Description
 
 在一片土地上有N个城市，通过N-1条无向边互相连接，形成一棵树的结构，相邻两个城市的距离为1，其中第i个城市的价值为value[i]。
+
 不幸的是，这片土地常常发生地震，并且随着时代的发展，城市的价值也往往会发生变动。
+
 接下来你需要在线处理M次操作：
-0 x k 表示发生了一次地震，震中城市为x，影响范围为k，所有与x距离不超过k的城市都将受到影响，该次地震造成的经济损失为所有受影响城市的价值和。
-1 x y 表示第x个城市的价值变成了y。
-为了体现程序的在线性，操作中的x、y、k都需要异或你程序上一次的输出来解密，如果之前没有输出，则默认上一次的输出为0。
+
+- 0 x k 表示发生了一次地震，震中城市为x，影响范围为k，所有与x距离不超过k的城市都将受到影响，该次地震造成的经济损失为所有受影响城市的价值和。
+- 1 x y 表示第x个城市的价值变成了y。
+  为了体现程序的在线性，操作中的x、y、k都需要异或你程序上一次的输出来解密，如果之前没有输出，则默认上一次的输出为0。
 
 ### Input
 
