--- a/_posts/2019-01-18-[HEOI2014]大工程.md
+++ b/_posts/2019-01-18-[HEOI2014]大工程.md
@@ -186,7 +186,6 @@ void Dfs__(int x=1,int fa=0,int dis=0)
 	  	fl=1,Dfs__(c[i].y,x,c[i].dis),siz[x]+=siz[c[i].y];
 	  	if(F1[x]>F1[c[i].y]+c[i].dis) F2[x]=F1[x],F1[x]=F1[c[i].y]+c[i].dis;
 	  	else if(F2[x]>F1[c[i].y]+c[i].dis) F2[x]=F1[c[i].y]+c[i].dis;
-	  	if(F2[x]>F2[c[i].y]+c[i].dis) F2[x]=F2[c[i].y]+c[i].dis;
 	  }
 	if(fl)
 	{
@@ -223,7 +222,7 @@ void Work(int k)
 	  	if(D[cc[i].x]<D[cc[i].y]) swap(cc[i].x,cc[i].y);
 	  	ans+=1ll*cc[i].dis*siz[cc[i].x]*(k-siz[cc[i].x]);
 	  }
-	maxn=0,Dfs(ID),maxn=0,Dfs(ID),maxn=0,Dfs_(ID),printf("%lld %d %d\n",ans,minn,maxn);
+	maxn=0,Dfs(ID),maxn=0,maxn=0,Dfs_(ID),printf("%lld %d %d\n",ans,minn,maxn);
 }
 int main()
 {
