--- a/_posts/2019-01-12-「雅礼集训 2017 Day7」事情的相似度.md
+++ b/_posts/2019-01-12-「雅礼集训 2017 Day7」事情的相似度.md
@@ -63,7 +63,7 @@ tags:
 
 ### 题解
 
-因为两个状态的$lcp$就是ta们在后缀树上$lca$的$len$，所以题目就是要求一个区间内两点的$len_{lca}$最大是多少
+因为两个状态的$lcs$（最长公共后缀Longest Common Suffix）就是ta们在后缀树上$lca$的$len$，所以题目就是要求一个区间内两点的$len_{lca}$最大是多少
 
 对于某个点，能让ta作为答案的只有ta的不同子树里的点或者ta自己和子树中的某个点
 
