--- a/_posts/2019-01-18-[SHOI2012]信用卡凸包.md
+++ b/_posts/2019-01-18-[SHOI2012]信用卡凸包.md
@@ -143,3 +143,63 @@ return 0;
 
 ### 题解
 
+把圆弧去掉，线段往里面合，最后能合成一个凸包
+
+同时圆弧合起来能合成一个圆
+
+所以就是所有信用卡的四角求一个凸包周长，最后加上一个圆的周长即可
+
+### 代码
+
+```c++
+# include<iostream>
+# include<cstring>
+# include<cstdio>
+# include<cmath>
+# include<algorithm>
+using namespace std;
+const int MAX=1e5+5;
+const double fs=1e-6;
+struct Point{
+	double x,y;
+	Point(double X=0,double Y=0) {x=X,y=Y;}
+	bool operator< (const Point &a) const{return x<a.x;}
+}_P[MAX];
+Point operator+ (Point a,Point b) {return Point(a.x+b.x,a.y+b.y);}
+Point operator- (Point a,Point b) {return Point(a.x-b.x,a.y-b.y);}
+Point operator* (Point a,double b) {return Point(a.x*b,a.y*b);}
+int n,cnt,Top;
+double r,a,b,ans;
+double Cross(Point x,Point y) {return x.x*y.y-y.x*x.y;}
+double Cmp(Point a,Point b,Point c) {return Cross(b-a,c-a);}
+bool cmp(Point a,Point b)
+{
+	if(!Cmp(_P[1],a,b)) return a.x<b.x;
+	return Cmp(_P[1],a,b)>0;
+}
+double GET_DIS(Point a,Point b) {return sqrt((a.x-b.x)*(a.x-b.x)+(a.y-b.y)*(a.y-b.y));}
+int st[MAX];
+int main()
+{
+	scanf("%d%lf%lf%lf",&n,&a,&b,&r);
+	for(int i=1;i<=n;++i)
+	  {
+	  	double x,y,R;
+	  	scanf("%lf%lf%lf",&x,&y,&R);
+	  	_P[++cnt]=(Point(cos(R),sin(R))*(b/2-r))+(Point(-sin(R),cos(R))*(a/2-r))+Point(x,y);
+	  	_P[++cnt]=(Point(cos(R),sin(R))*(-(b/2-r)))+(Point(-sin(R),cos(R))*(a/2-r))+Point(x,y);
+	  	_P[++cnt]=(Point(cos(R),sin(R))*(-(b/2-r)))+(Point(-sin(R),cos(R))*(-(a/2-r)))+Point(x,y);
+	  	_P[++cnt]=(Point(cos(R),sin(R))*(b/2-r))+(Point(-sin(R),cos(R))*(-(a/2-r)))+Point(x,y);
+	  }
+	sort(_P+1,_P+1+cnt),st[Top=1]=1,sort(_P+2,_P+1+cnt,cmp);
+	for(int i=2;i<=cnt;++i)
+	  {
+	  	while(Top>1&&Cross(_P[st[Top]]-_P[st[Top-1]],_P[i]-_P[st[Top]])<=0) --Top;
+		st[++Top]=i;
+	  } 
+	for(int i=2;i<=Top;++i)
+	  ans+=GET_DIS(_P[st[i]],_P[st[i-1]]);
+	return printf("%.2lf",ans+GET_DIS(_P[st[Top]],_P[1])+2*r*acos(-1.0)),0;
+}
+```
+
