--- a/_posts/2019-01-18-[SHOI2012]信用卡凸包.md
+++ b/_posts/2019-01-18-[SHOI2012]信用卡凸包.md
@@ -16,11 +16,11 @@ tags:
 
 SHOI2012D1T2
 
-## 题目描述
+### 题目描述
 
 信用卡是一个矩形，唯四个角作了圆滑处理，使它们都是与矩形的两边相切的 1/4 圆，如下图所示。现在平面上有一些规格相同的信用卡，试求其凸包的周长。注意凸包未必是多边形，因为它可能包含若干段圆弧。
 
-![img](https://cdn.luogu.org/upload/pic/6549.png)
+![](https://cdn.luogu.org/upload/pic/6549.png)
 
 ### 输入输出格式
 
@@ -56,12 +56,10 @@ SHOI2012D1T2
 0.0 0.0 0.0
 ```
 #### 输出样例#2：
-
 ```plain
 41.60
 ```
 #### 输入样例#3：
-
 ```plain
 3
 6.0 6.0 1.0
@@ -70,25 +68,20 @@ SHOI2012D1T2
 0.0 0.0 0.5235987756
 ```
 
-输出样例#3：
-
- 
-
-复制
-
-```
+#### 输出样例#3：
+```plain
 41.63
 ```
 
-## 说明
+### 说明
 
-样例1说明： ![img](https://cdn.luogu.org/upload/pic/6550.png)
+样例1说明： ![](https://cdn.luogu.org/upload/pic/6550.png)
 
 本样例中的 2 张信用卡的轮廓在上图中用实线标出，如果视 1.5707963268为pi/2，那么凸包的周长为16+4sqrt(2)
 
-样例2说明： ![img](https://cdn.luogu.org/upload/pic/6551.png)
+样例2说明： ![](https://cdn.luogu.org/upload/pic/6551.png)
 
-样例3说明： ![img](https://cdn.luogu.org/upload/pic/6552.png)
+样例3说明： ![](https://cdn.luogu.org/upload/pic/6552.png)
 
 其凸包的周长约为41.628267652。
 
@@ -137,9 +130,9 @@ return 0;
 
 数据范围：
 
-![img](https://cdn.luogu.org/upload/pic/6553.png)
+![](https://cdn.luogu.org/upload/pic/6553.png)
 
-![img](https://cdn.luogu.org/upload/pic/6554.png)
+![](https://cdn.luogu.org/upload/pic/6554.png)
 
 ### 题解
 
