--- a/_posts/2019-01-18-[SHOI2012]信用卡凸包.md
+++ b/_posts/2019-01-18-[SHOI2012]信用卡凸包.md
@@ -20,7 +20,7 @@ SHOI2012D1T2
 
 信用卡是一个矩形，唯四个角作了圆滑处理，使它们都是与矩形的两边相切的 1/4 圆，如下图所示。现在平面上有一些规格相同的信用卡，试求其凸包的周长。注意凸包未必是多边形，因为它可能包含若干段圆弧。
 
-![](https://cdn.luogu.org/upload/pic/6549.png)
+![](/img/study/6549.png)
 
 ### 输入输出格式
 
@@ -75,13 +75,13 @@ SHOI2012D1T2
 
 ### 说明
 
-样例1说明： ![](https://cdn.luogu.org/upload/pic/6550.png)
+样例1说明： ![](/img/study/6550.png)
 
 本样例中的 2 张信用卡的轮廓在上图中用实线标出，如果视 1.5707963268为pi/2，那么凸包的周长为16+4sqrt(2)
 
-样例2说明： ![](https://cdn.luogu.org/upload/pic/6551.png)
+样例2说明： ![](/img/study/6551.png)
 
-样例3说明： ![](https://cdn.luogu.org/upload/pic/6552.png)
+样例3说明： ![](/img/study/6552.png)
 
 其凸包的周长约为41.628267652。
 
@@ -130,9 +130,9 @@ return 0;
 
 数据范围：
 
-![](https://cdn.luogu.org/upload/pic/6553.png)
+![](/img/study/6553.png)
 
-![](https://cdn.luogu.org/upload/pic/6554.png)
+![](/img/study/6554.png)
 
 ### 题解
 
