--- a/_posts/2019-01-18-[SHOI2012]信用卡凸包.md
+++ b/_posts/2019-01-18-[SHOI2012]信用卡凸包.md
@@ -156,7 +156,11 @@ const double fs=1e-6;
 struct Point{
 	double x,y;
 	Point(double X=0,double Y=0) {x=X,y=Y;}
-	bool operator< (const Point &a) const{return x<a.x;}
+	bool operator< (const Point &a)
+	const{
+		if(x!=a.x) return x<a.x;
+		return y<a.y;
+	}
 }_P[MAX];
 Point operator+ (Point a,Point b) {return Point(a.x+b.x,a.y+b.y);}
 Point operator- (Point a,Point b) {return Point(a.x-b.x,a.y-b.y);}
@@ -167,7 +171,7 @@ double Cross(Point x,Point y) {return x.x*y.y-y.x*x.y;}
 double Cmp(Point a,Point b,Point c) {return Cross(b-a,c-a);}
 bool cmp(Point a,Point b)
 {
-	if(!Cmp(_P[1],a,b)) return a.x<b.x;
+	if(fabs(Cmp(_P[1],a,b))<fs) return a.x<b.x;
 	return Cmp(_P[1],a,b)>0;
 }
 double GET_DIS(Point a,Point b) {return sqrt((a.x-b.x)*(a.x-b.x)+(a.y-b.y)*(a.y-b.y));}
