--- a/_posts/9999-12-31-常见错误.md
+++ b/_posts/9999-12-31-常见错误.md
@@ -39,6 +39,8 @@ tags:
 - 一定要读懂题，学好语文非常重要
 - 广义$SAM$不要用基数排序处理线段树合并~~其实好像是可以的但是我不想写[对的广义SAM](https://blog.csdn.net/elijahqi/article/details/79782107?utm_source=blogxgwz2)了就这么认为吧~~
 - 指针移动的时候注意不要出边界
+- 写有返回值的函数一定要返回值
+- 求叉积的时候注意数据范围，小心乘爆
 
 [$Cansult$](https://cansult.ga/22925.html)
 
