--- a/_posts/2019-01-21-[SDOI2013]保护出题人.md
+++ b/_posts/2019-01-21-[SDOI2013]保护出题人.md
@@ -3,12 +3,11 @@ layout:		post
 title:		"[SDOI2013]保护出题人"
 date:		2019-01-21
 author:		"Dispwnl"
-header-img:	"img/used/36346.png"`
+header-img:	"img/used/36346.png"
 catalog:	false
 tags:
     - 凸包
     - 三分法
-
 ---
 
 ## [题目](https://www.luogu.org/problemnew/show/P3299)
