--- a/_posts/2019-01-23-[SDOI2014]向量集.md
+++ b/_posts/2019-01-23-[SDOI2014]向量集.md
@@ -3,16 +3,16 @@ layout:		post
 title:		"[SDOI2014]向量集"
 date:		2019-01-23
 author:		"Dispwnl"
-header-img:	
+header-img:	"img/used/8667.jpg"
 catalog:	false
 tags:
     - 凸包
     - 线段树
+    - 三分法
 ---
 
 ## [题目](https://www.luogu.org/problemnew/show/P3309)
-
-## 题目描述
+### 题目描述
 
 维护一个向量集合，在线支持以下操作：
 
@@ -65,3 +65,158 @@ Q 21 18 19 18
 ### 说明
 
 1 < =N < =4*10^5
+
+### 题解
+看到向量，就想到构建凸包（大雾
+
+因为要求点积的最大值，设点积为$t$，则有$t=xx'+yy'$（$(x,y)$为询问向量）
+
+移一下项，同除$y$，$y'=\frac{-xx'+t}{y}$
+
+这就是一个关于$x',y'$的一次函数，所以要求的是$\frac{t}{y}$的最大值，及截距的最大值，所以要求个凸包，求答案的时候在上下凸壳上三分一下
+
+~~然后y你分正负讨论一下发现还是可以直接比较点积~~
+
+癌怎么维护凸包啊……
+
+~~这太简单了写个线段树套平衡树维护动态凸包就行了~~
+
+因为查询的区间肯定都是满区间，所以等一个区间满了的时候一次性构造凸包就行了
+
+时间复杂度是$O(n{logn}^2)$的
+
+因为凸包的比较函数写错了调了一下午+一晚上……
+
+### 代码
+
+```c++
+# include<iostream>
+# include<cstring>
+# include<cstdio>
+# include<vector>
+# include<cmath>
+# include<algorithm>
+# define tl s[k].l
+# define tr s[k].r
+# define mid (l+r>>1)
+# define LL long long
+using namespace std;
+const int MAX=4e5+5;
+struct Point{
+    int x,y;
+    Point(int X=0,int Y=0) {x=X,y=Y;}
+    bool operator< (const Point &a)
+    const{
+        if(x!=a.x) return x<a.x;
+        return y<a.y;
+    }
+}_P[MAX],H;
+struct p{
+    int l,r,Top,cnt,str,_L;
+}s[MAX<<2];
+int n,rt,tot,cnt,_cnt,__cnt;
+LL ans;
+int st[MAX<<4];
+bool FL;
+vector<Point> __P[MAX<<3];
+int read(LL ans=0)
+{
+    int x=0,fl=1;
+    char ch=getchar();
+    for(;!isdigit(ch);fl=(ch=='-')?-1:1,ch=getchar());
+    for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
+    x=x*fl;
+    if(FL) x=x^(ans&0x7fffffff);
+    return x;
+}
+Point operator- (Point x,Point y) {return Point(x.x-y.x,x.y-y.y);}
+LL Cross(Point x,Point y) {return 1ll*x.x*y.y-1ll*x.y*y.x;}
+LL Dot(Point x,Point y) {return 1ll*x.x*y.x+1ll*x.y*y.y;}
+LL Cmp(Point a,Point b,Point c) {return Cross(b-a,c-a);}
+bool cmp(Point a,Point b)
+{
+    if(!Cmp(H,a,b)) return a<b;
+    return Cmp(H,a,b)>0;
+}
+char Read()
+{
+    char ch=getchar();
+    for(;!isalpha(ch);ch=getchar());
+    return ch;
+}
+void GET_HULL(int k)
+{
+    if(s[k].cnt==1) return;
+    sort(__P[k].begin(),__P[k].end()),H=__P[k][0],st[s[k].Top=++_cnt]=0,sort(__P[k].begin()+1,__P[k].end(),cmp),s[k].str=_cnt;
+    for(int i=1;i<s[k].cnt;++i)
+      {
+      	while(s[k].Top>_cnt&&Cross(__P[k][st[s[k].Top]]-__P[k][st[s[k].Top-1]],__P[k][i]-__P[k][st[s[k].Top]])<=0) --s[k].Top;
+      	st[++s[k].Top]=i;
+      }
+    _cnt=s[k].Top,s[k]._L=s[k].Top;
+    for(int i=s[k].str;i<s[k].Top;++i)
+      if(__P[k][st[i]].x>=__P[k][st[i+1]].x) {s[k]._L=i;break;}
+    ++_cnt,st[++s[k].Top]=0;
+}
+LL GET_B(Point A,Point B) {return Dot(A,B);}
+LL GET_UP(int k,Point A)
+{
+    if(s[k].cnt==1) return Dot(__P[k][0],A);
+    int l=s[k]._L,r=s[k].Top;
+    while(l+3<=r)
+    {
+        int midl(l+r>>1),midr(midl+r>>1);
+        if(GET_B(A,__P[k][st[midl]])>GET_B(A,__P[k][st[midr]])) r=midr;
+        else l=midl;
+    }
+    LL Ans=-1e18;
+    for(int i=l;i<=r;++i)
+      Ans=max(Ans,Dot(__P[k][st[i]],A));
+    return Ans;
+}
+LL GET_DOWN(int k,Point A)
+{
+    if(s[k].cnt==1) return Dot(__P[k][0],A);
+    int l=s[k].str,r=s[k]._L;
+    while(l+3<=r)
+    {
+        int midl(l+r>>1),midr(midl+r>>1);
+        if(GET_B(A,__P[k][st[midl]])>GET_B(A,__P[k][st[midr]])) r=midr;
+        else l=midl;
+    }
+    LL Ans=-1e18;
+    for(int i=l;i<=r;++i)
+      Ans=max(Ans,Dot(__P[k][st[i]],A));
+    return Ans;
+}
+LL ask(int l,int r,int k,int L,int R,Point A)
+{
+    if(r<L||R<l) return -1e18;
+    if(l>=L&&r<=R) return max(GET_UP(k,A),GET_DOWN(k,A));
+    if(R<=mid) return ask(l,mid,tl,L,R,A);
+    if(L>mid) return ask(mid+1,r,tr,L,R,A);
+    return max(ask(l,mid,tl,L,R,A),ask(mid+1,r,tr,L,R,A));
+}
+void change(int l,int r,int &k,int x)
+{
+    if(!k) k=++tot;
+    __P[k].push_back(_P[x]),++s[k].cnt;
+    if(s[k].cnt==r-l+1) GET_HULL(k);
+    if(l==r) return;
+    if(x<=mid) change(l,mid,tl,x);
+    else change(mid+1,r,tr,x);
+}
+int main()
+{
+    n=read(),FL=(Read()=='E'?0:1);
+    for(int i=1,x,y,l,r,L=0;i<=n;++i)
+      {
+      	char A=Read();
+      	x=read(ans),y=read(ans);
+      	if(A=='Q') l=read(ans),r=read(ans),printf("%lld\n",ans=ask(1,n,rt,l,r,Point(x,y)));
+      	else if(A=='A') _P[++L]=Point(x,y),change(1,n,rt,L);
+      }
+    return 0;
+}
+```
+
