--- a/_posts/2019-01-23-[SDOI2014]向量集.md
+++ b/_posts/2019-01-23-[SDOI2014]向量集.md
@@ -180,7 +180,7 @@ LL GET_DOWN(int k,Point A)
     int l=s[k].str,r=s[k]._L;
     while(l+3<=r)
     {
-        int midl(l+r>>1),midr(midl+r>>1);
+        int midl=l+r>>1,midr=midl+r>>1;
         if(GET_B(A,__P[k][st[midl]])>GET_B(A,__P[k][st[midr]])) r=midr;
         else l=midl;
     }
