--- a/_posts/2018-07-23-K-D Tree略解.md
+++ b/_posts/2018-07-23-K-D Tree略解.md
@@ -110,7 +110,7 @@ int GET_POINT()//垃圾回收
     if(top) return st[top--];
     return ++tot;
 }
-build(int l,int r,bool d)//d是指标，tl是左儿子，tr是右儿子（宏定义过了QAQ）
+void build(int l,int r,bool d)//d是指标，tl是左儿子，tr是右儿子（宏定义过了QAQ）
 {
     if(l>r) return 0;
     D=d;
