--- a/_posts/2019-01-23-[SDOI2014]向量集.md
+++ b/_posts/2019-01-23-[SDOI2014]向量集.md
@@ -165,7 +165,7 @@ LL GET_UP(int k,Point A)
     int l=s[k]._L,r=s[k].Top;
     while(l+3<=r)
     {
-        int midl(l+r>>1),midr(midl+r>>1);
+        int midl=(l+r>>1),midr=(midl+r>>1);
         if(GET_B(A,__P[k][st[midl]])>GET_B(A,__P[k][st[midr]])) r=midr;
         else l=midl;
     }
