--- a/_posts/2019-02-13-[BZOJ4765]普通计算姬.md
+++ b/_posts/2019-02-13-[BZOJ4765]普通计算姬.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[BZOJ4765]普通计算姬"
 date:		2019-02-13
 author:		"Dispwnl"
-header-img:	"img/used/"
+header-img:	"img/used/345666.jpg"
 catalog:	false
 tags:
     - 树状数组
