--- a/_posts/2018-06-13-扩展中国剩余定理略解.md
+++ b/_posts/2018-06-13-扩展中国剩余定理略解.md
@@ -6,7 +6,7 @@ author:     "Dispwnl"
 header-img: "img/used/1435.jpg"
 catalog: true
 tags:
-    - 数论
+    - 中国剩余定理
     - 整理
 ---
 ~~既然是数论就做好面对一大堆式子的觉悟了吧~~
