--- a/_posts/9999-12-31-一些常用的公式.md
+++ b/_posts/9999-12-31-一些常用的公式.md
@@ -6,7 +6,6 @@ author:     "Dispwnl"
 header-img: "img/used/997.jpg"
 catalog: true
 tags:
-    - 数论
     - 整理
 ---
 >这里有一些常用的公式。欢迎补充
@@ -14,7 +13,7 @@ tags:
 
 - $\sum_{n\vert x}\sum_{i=1}^{N}\sum_{j=1}^{M}[\gcd(i,j)==x]=\left \lfloor \frac{N}{n} \right \rfloor*\left \lfloor \frac{M}{n} \right \rfloor$
 
-- 一个$n*m$的矩阵，点$(i,j)$到$(0,0)$这条线段（不算头尾）上整数点的个数：$ \gcd(i,j)$
+- 一个$n\times m$的矩阵，点$(i,j)$到$(0,0)$这条线段（不算头尾）上整数点的个数：$ \gcd(i,j)$
 
 - $\sum_{d\vert n} \mu(d)=[n==1]$
 
