--- a/_posts/2018-06-13-扩展中国剩余定理略解.md
+++ b/_posts/2018-06-13-扩展中国剩余定理略解.md
@@ -19,8 +19,10 @@ tags:
 
 扩展中国剩余定理就可以解决这个问题
 
-假设现在有同余方程<a href="http://www.codecogs.com/eqnedit.php?latex=\left\{\begin{matrix}x\equiv&space;a_1\pmod{p_1}&space;\\x\equiv&space;a_2\pmod{p_2}&space;\\...&space;\\x\equiv&space;a_n\pmod{p_n}&space;\end{matrix}\right." target="_blank"><img src="http://latex.codecogs.com/gif.latex?\left\{\begin{matrix}x\equiv&space;a_1\pmod{p_1}&space;\\x\equiv&space;a_2\pmod{p_2}&space;\\...&space;\\x\equiv&space;a_n\pmod{p_n}&space;\end{matrix}\right." title="\left\{\begin{matrix}x\equiv a_1\pmod{p_1} \\x\equiv a_2\pmod{p_2} \\... \\x\equiv a_n\pmod{p_n} \end{matrix}\right." /></a>
-
+假设现在有同余方程
+$$
+\left\{\begin{matrix}x\equiv a_1\pmod{p_1} \\x\equiv a_2\pmod{p_2} \\... \\x\equiv a_n\pmod{p_n} \end{matrix}\right.
+$$
 先看前两项可以化为$x=a_1+k_1p_1=a_2+k_2p_2$
 
 移项得：$k_1p_1-k_2p_2=a_2-a_1$
