--- a/_posts/2018-06-15-莫比乌斯反演略解.md
+++ b/_posts/2018-06-15-莫比乌斯反演略解.md
@@ -83,7 +83,7 @@ $=\sum_{i=1}^{n}\sum_{j=1}^{m}[x\vert\gcd(i,j)]$
 
 $=\sum_{i=1}^{\left\lfloor\frac{n}{x}\right\rfloor}\sum_{i=1}^{\left\lfloor\frac{m}{x}\right\rfloor}[1\vert\gcd(i,j)]$
 
-$=\left\lfloor\frac{n}{x}\right\rfloor\left\lfloor\frac{m}{x}\right\rfloor$
+$=\left\lfloor\frac{n}{x}\right\rfloor\left\lfloor\frac{m}{x}\right\rfloor​$
 
 $f(x)=\sum_{x\vert d}\mu(\frac{d}{x})F(d)$
 
