--- a/_posts/2019-02-13-扩展Lucas略解.md
+++ b/_posts/2019-02-13-扩展Lucas略解.md
@@ -10,6 +10,7 @@ tags:
     - 中国剩余定理
     - 整理
 ---
+### $a.$
 
 要求$C_{n}^{m}\%p$的值，如果$p$是质数，可以用$Lucas$定理$O(logn)$解决
 
@@ -21,6 +22,8 @@ tags:
 
 ------
 
+### $b.$
+
 可以把$p$拆成$p_1^{k_1}\times p_2^{k_2}\times …\times p_l^{k_l}$，其中$p_i$为质因数
 
 假设答案为$x$，则有
@@ -29,15 +32,16 @@ $$
 $$
 
 
-$p_i^{k_i}​$之间互质！所以如果知道$a_i​$，可以用$crt​$求出$x​$
+$p_i^{k_i}​$之间互质！所以如果知道$a_i$，可以用$crt$求出$x$
 
-$a_i​$就是在$\%p_i^{k_i}​$意义下$C_{n}^{m}​$的值
+$a_i​$就是在$\%p_i^{k_i}$意义下$C_{n}^{m}$的值
 
-问题转换成了如何求$C_{n}^{m}\%p_i^{k_i}​$
+问题转换成了如何求$C_{n}^{m}\%p_i^{k_i}$
 
 ------
+### $c.$
 
-我们知道，$C_{n}^{m}\%p_i^{k_i}=\frac{n!}{m!(n-m)!}\%p_i^{k_i}​$
+我们知道，$C_{n}^{m}\%p_i^{k_i}=\frac{n!}{m!(n-m)!}\%p_i^{k_i}$
 
 如果$n!,m!,(n-m)!$和$\%p_i^{k_i}$互质的话，可以分别求出$n!\%p_i^{k_i},m!\%p_i^{k_i},(n-m)!\%p_i^{k_i}$的值然后逆元搞搞就行了
 
@@ -47,11 +51,13 @@ $n!$中质因子$p$的个数为$\left\lfloor\frac{n}{p}\right\rfloor+\left\lfloo
 
 ------
 
+### $d.$
+
 现在要求的东西只剩下$n!\%p_i^{k_i}$了
 
 设答案为$F(n)$
 
-用$G(n)$表示$\prod_{j=1,p_i\nmid j}^{n}j\%p_i^{k_i}​$
+用$G(n)$表示$\prod_{j=1,p_i\nmid j}^{n}j\%p_i^{k_i}$
 
 如果$n<p_i​$，这时候$F(n)=G(n)​$
 
@@ -67,7 +73,7 @@ $n!$中质因子$p$的个数为$\left\lfloor\frac{n}{p}\right\rfloor+\left\lfloo
 
 ------
 
-### 各部分代码
+### $e.$
 
 #### 逆元部分
 
@@ -124,4 +130,3 @@ int C(int n,int m,int p,int pk)
     return 1ll*_A*inv(_B,pk)%pk*inv(_C,pk)%pk*Pow(p,k,pk)%pk*_%_P_*inv(_,pk)%_P_;
 }
 ```
-
