--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -650,9 +650,25 @@ $Asia$：诶$gay$哥你说……
 
 ### $02.12$
 
-学长：$Luogu$开$O2$要干什么啊
+学长：$Luogu$怎么开$O2$啊
 
 $fuge$：哦……需要点一下……
 
-[$Cansult​$的日记 比我的有意思多了](https://cansult.ga/3632.html)
+### $02.13$
+
+宽嫂：唐骨精三打白骨空
+
+------
+
+学长一个下午都坐在$fuge$旁边看ta写代码……
+
+晚饭后
+
+$fuge$：诶学长是不是已经走了啊
+
+我：对我刚才看ta走大门来着
+
+$fuge$：太好了我终于可以看那道题的题解了
+
+[$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
