--- a/_posts/2019-02-14-[PA2010]Riddle.md
+++ b/_posts/2019-02-14-[PA2010]Riddle.md
@@ -63,3 +63,72 @@ $d_x\rightarrow p_x,p_x'\rightarrow d_x'$
 
 $p_{x-1}\rightarrow p_x,p_x'\rightarrow p_{x-1}'$
 
+$d_x\rightarrow p_{x-1}',p_{x-1}\rightarrow d_x'​$
+
+### 代码
+
+```c++
+# include<iostream>
+# include<cstring>
+# include<cstdio>
+# include<algorithm>
+# define A(x) (x)
+# define B(x) (x+n)
+# define C(x) (x+2*n)
+# define D(x) (x+3*n)
+using namespace std;
+const int MAX=5e6+5;
+struct p{
+	int x,y;
+}c[MAX<<1];
+int n,m,num,Top,cnt,K,_;
+int h[MAX],dfn[MAX],low[MAX],st[MAX],col[MAX],a[MAX];
+bool use[MAX];
+void add(int x,int y) {c[++num]=(p){h[x],y},h[x]=num;}
+void Tarjan(int x)
+{
+	st[++Top]=x,use[x]=1,dfn[x]=low[x]=++cnt;
+	for(int i=h[x];i;i=c[i].x)
+	  if(!dfn[c[i].y]) Tarjan(c[i].y),low[x]=min(low[x],low[c[i].y]);
+	  else if(use[c[i].y]) low[x]=min(low[x],dfn[c[i].y]);
+	if(dfn[x]==low[x])
+	{
+		int tt=-1;
+		++_;
+		while(tt!=x) tt=st[Top--],use[tt]=0,col[tt]=_;
+	}
+}
+int read()
+{
+	int x(0);
+	char ch=getchar();
+	for(;!isdigit(ch);ch=getchar());
+	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
+	return x;
+}
+int main()
+{
+	n=read(),m=read(),K=read();
+	for(int i=1,x,y;i<=m;++i)
+	  x=read(),y=read(),add(B(x),A(y)),add(B(y),A(x));
+	for(int i=1;i<=n;++i)
+	  add(A(i),C(i)),add(D(i),B(i));
+	for(int i=1,tt;i<=K;++i)
+	  {
+	  	tt=read();
+	  	for(int j=1;j<=tt;++j)
+	  	  {
+	  	  	a[j]=read();
+	  	  	if(j>1) add(A(a[j]),D(a[j-1])),add(C(a[j-1]),B(a[j])),add(C(a[j-1]),C(a[j])),add(D(a[j]),D(a[j-1]));
+		  }
+	  }
+	for(int i=1;i<=4*n;++i)
+	  if(!dfn[i]) Tarjan(i);
+	for(int i=1;i<=n;++i)
+	  if(col[A(i)]==col[B(i)]||col[C(i)]==col[D(i)]) return printf("NIE"),0;
+	return printf("TAK"),0;
+}
+```
+
+
+
