--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -670,5 +670,21 @@ $fuge$：诶学长是不是已经走了啊
 
 $fuge$：太好了我终于可以看那道题的题解了
 
+### $02.16$
+
+学长在屏幕上放了一个公式
+$$
+span(v)=\{\sum a_iv_i\vert a_i\in \mathbb{F}\}
+$$
+提了一个问题然后问$fuge$：你会吗
+
+$fuge$：不会，主要是没看懂公式
+
+$fuge$：我不知道为啥这两个东西前面的能整除后面的
+
+学长：![](/img/qaq/？？？.jpg)
+
+
+
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
