--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -664,7 +664,7 @@ $fuge$：哦……需要点一下……
 
 晚饭后
 
-$fuge$：诶学长是不是已经走了啊
+$fuge​$：诶学长是不是已经走了啊
 
 我：对我刚才看ta走大门来着
 
@@ -684,7 +684,15 @@ $fuge$：我不知道为啥这两个东西前面的能整除后面的
 
 学长：![](/img/qaq/？？？.jpg)
 
+------
 
+学长：这题有人会了吗
+
+$mhr$：首先叶子节点不会影响ta的子树……
+
+学长：叶子节点不会影响子树你疯了吗
+
+$mhr$：……因为叶子节点没有子树
 
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
