--- a/_posts/2018-03-31-[NOI2011]阿狸的打字机.md
+++ b/_posts/2018-03-31-[NOI2011]阿狸的打字机.md
@@ -7,7 +7,7 @@ header-img: "img/used/16.jpg"
 catalog: true
 tags:
     - AC自动机
-    - 字符串
+    - 线段树
 ---
 ## [题目](https://www.luogu.org/problemnew/show/P2414)
 ### 题目背景
@@ -69,7 +69,7 @@ aPaPBbP
 
 可以发现$fail$指针有一个神奇的性质：
 
-如果一个字符串$a$的最后一位的$fail$指向字符串$b$的一个字符，那么$b$肯定包含$a$（很明显的一个性质吧）
+如果一个字符串$a$的最后一位的$fail$指向字符串$b$的一个字符，那么$a$肯定包含$b$
 
 所以原问题就可以转化为统计$x$最后一位在$fail$树里的子树里有多少$y$的字符
 
