--- a/_posts/2019-01-18-[BZOJ3879]SvT.md
+++ b/_posts/2019-01-18-[BZOJ3879]SvT.md
@@ -59,7 +59,7 @@ popoqqq
 
 对于询问三,有四个后缀”popoqqq”,”opoqqq”,”qqq”,”qq”,其中只有”qqq”,”qq”两个后缀之间的LCP不为0,且长度为2,因此答案为2.
 
-对于100%的测试数据,有$S\le 5\times 10^5$,且$\sum t\le 3\times 10^6$.
+对于100%的测试数据,有$S\le 5\times 10^5$,且$\sum t\le 3\times 10^6​$.
 
 特别注意:由于另一世界线的某些参数发生了变化,对于一组询问,即使一个后缀出现了多次,也仅算一次.
 
@@ -69,7 +69,7 @@ popoqqq
 
 题意就是要求一堆后缀的$lcp$，所以把字符串倒过来就成了求前缀的$lcs$（最长公共后缀Longest Common Suffix），即两两状态的$LCA$
 
-建出虚树来后，从下往上依次处理每个状态能被做LCA多少次即可
+建出虚树来后，从下往上依次处理每个状态能被做$LCA​$多少次即可
 
 ### 代码
 
