--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -694,5 +694,17 @@ $mhr$：首先叶子节点不会影响ta的子树……
 
 $mhr$：……因为叶子节点没有子树
 
+### $02.17$
+
+$Asia$最近开始喜欢喝旺仔牛奶，一天一罐
+
+然后把空罐子放在桌子上，就这样几天过去了
+
+$loli$过来了：……这是啥
+
+我和$Asia$看着$5$层高的旺仔牛奶塔~~上面还有一个芬达的空瓶子~~陷入了沉思
+
+~~全扔掉了qaq真是太可惜了~~
+
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
