--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -672,10 +672,8 @@ $fuge$：太好了我终于可以看那道题的题解了
 
 ### $02.16$
 
-学长在屏幕上放了一个公式
-$$
-span(v)=\{\sum a_iv_i\vert a_i\in \mathbb{F}\}
-$$
+学长在屏幕上放了一个公式：$span(v)=\{\sum a_iv_i\vert a_i\in \mathbb{F}\}$
+
 提了一个问题然后问$fuge$：你会吗
 
 $fuge$：不会，主要是没看懂公式
@@ -700,7 +698,13 @@ $Asia$最近开始喜欢喝旺仔牛奶，一天一罐
 
 然后把空罐子放在桌子上，就这样几天过去了
 
-$loli$过来了：……这是啥
+$loli$过来了
+
+我们这的桌子
+
+
+
+$loli$：……这是啥
 
 我和$Asia$看着$5$层高的旺仔牛奶塔~~上面还有一个芬达的空瓶子~~陷入了沉思
 
