--- a/_posts/2019-01-23-[SDOI2014]向量集.md
+++ b/_posts/2019-01-23-[SDOI2014]向量集.md
@@ -73,7 +73,7 @@ Q 21 18 19 18
 
 移一下项，同除$y$，$y'=\frac{-xx'+t}{y}$
 
-这就是一个关于$x',y'$的一次函数，所以要求的是$\frac{t}{y}$的最大值，及截距的最大值，所以要求个凸包，求答案的时候在上下凸壳上三分一下
+这就是一个关于$x',y'$的一次函数，要求的是$t$的最大值，所以分$y$的正负性讨论一下在上凸壳还是在下凸壳求，在上下凸壳上三分一下就行
 
 ~~然后y你分正负讨论一下发现还是可以直接比较点积~~
 
