--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -710,5 +710,39 @@ $loli$：……这是啥
 
 ~~全扔掉了qaq真是太可惜了~~
 
+### $02.20$
+
+我回到座位，想带上耳机
+
+？怎么戴不上……
+
+我看了一眼，一把把我耳机从$Asia$的主机上拽了下来
+
+~~论耳机线短的好处~~
+
+------
+
+$Asia$非要我试试耳机插ta的主机上突然听歌的感受
+
+然后ta摁了两个键
+
+>我的老父亲
+>
+>我最疼爱的人
+>
+>人间的甘甜有十分
+>
+>您只尝了三分
+>
+>这辈子做你的儿女
+>
+>我没有做够
+>
+>央求您呀下辈子
+>
+>还做我的父亲……
+
+![](/img/qaq/4563333.jpg)
+
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
