--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -744,5 +744,17 @@ $Asia$非要我试试耳机插ta的主机上突然听歌的感受
 
 ![](/img/qaq/4563333.jpg)
 
+### $02.21$
+
+中午
+
+我和$Refun$在食堂逛了半天没找到别人拼菜
+
+然后两个人一脸懵逼的看着桌子上的两碗炸蘑菇和白米饭
+
+还是昨天剩下的蘑菇，你懂我意思吧
+
+就着白米饭吃炸蘑菇真好吃！kksk！
+
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
