--- a/_posts/2018-06-15-莫比乌斯反演略解.md
+++ b/_posts/2018-06-15-莫比乌斯反演略解.md
@@ -30,7 +30,7 @@ $\mu$满足一些性质：
 可以欧拉筛$O(n)$求出$\mu$
 
 代码：
-```
+```c++
 u[1]=1;
 for(int i=2;i<=n;++i)
   {
@@ -57,7 +57,7 @@ $\sum_{d\vert n}\mu(d)F(\frac{n}{d})=\sum_{d\vert n}\mu(d)\sum_{x\vert \frac{n}{
 
 $=\sum_{x\vert n}f(x)\sum_{d\vert \frac{n}{x}}\mu(d)$
 
-$=\sum_{x\vert n}f(x)$
+$=\sum_{x\vert n}f(x)[n==x]$
 
 $=f(n)$（最后根据的是μ函数的性质）
 
