--- a/_posts/2018-09-01-[BZOJ4916]神犇和蒟蒻.md
+++ b/_posts/2018-09-01-[BZOJ4916]神犇和蒟蒻.md
@@ -1,10 +1,10 @@
-﻿---
-layout:     post
-title:      "[BZOJ4916]神犇和蒟蒻"
-date:       2018-09-01
-author:     "Dispwnl"
-header-img: "img/used/35356.jpg"
-catalog: true
+---
+layout:		post
+title:		"[BZOJ4916]神犇和蒟蒻"
+date:		2018-09-01
+author:		"Dispwnl"
+header-img:	"img/used/35356.jpg"
+catalog:	false
 tags:
     - 杜教筛
 ---
@@ -20,7 +20,7 @@ tags:
 ### Output
 请你输出一个整数$A=\sum_{i=1}^N{\mu (i^2)}$;
 
-请你输出一个整数$B=\sum_{i=1}^N{\varphi (i^2)}$;
+请你输出一个整数$B=\sum_{i=1}^N{\varphi (i^2)}​$;
 ![](https://www.lydsy.com/JudgeOnline/upload/201705/11.png)
 
 ### Sample Input
@@ -37,15 +37,15 @@ tags:
 
 第二问，可以发现$\phi(i^2)=i\phi(i)$
 
-来自malao的证明：
+来自$AH$的证明：
 
-证这个就是证若$\gcd(x,y)=1$，则有$\gcd(x^2,y+kx)=1$；若$\gcd(x,y)!=1$，则有$\gcd(x^2,y+kx)!=1$
+证这个就是证若$\gcd(x,y)=1​$，则有$\gcd(x^2,y+kx)=1​$；若$\gcd(x,y)!=1​$，则有$\gcd(x^2,y+kx)!=1​$
 
 设$y=ax+b$，其中$\gcd(b,x)=1$，则$\gcd(x^2,y+kx)=\gcd(x^2,(a+k)x+b)$，可以发现$(a+k)x+b$与$x$还是互质的，即与$x^2$互质
 
 不互质同理
 
-因为$n<=1e9$，所以用杜教筛处理这个式子
+因为$n\le 1e9$，所以用杜教筛处理这个式子
 
 设$t(i)=i\phi(i)$，$S(n)=\sum_{i=1}^{n}t(i)$
 
@@ -58,7 +58,7 @@ tags:
 所以$S(n)=\sum_{i=1}^{n}i^2-\sum_{i=2}^{n}iS(\left\lfloor\frac{n}{i}\right\rfloor)$，这个式子就可以处理了
 
 ### 代码
-```
+```c++
 # include<iostream>
 # include<cstring>
 # include<cstdio>
