--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -729,5 +729,23 @@ $Asia$非要我试试耳机插ta的主机上突然听歌的感受
 
 就着白米饭吃炸蘑菇真好吃！kksk！
 
+### $02.23$
+
+![](/img/qwq/那么答案只有一个了.jpg)
+
+$Cansult$了解了[内海折断拐杖的梗](https://www.baidu.com/link?url=XlNwp9b5aPHcJ-XX4N6bqbCbD_itX_5SUjrH3bb4vnPYWWZG99awltB1JjU46KUd21SNa6awKB9tVe9gokL9kL6_OYuTitTD4hagEDmJFZXj6Luax4H5EVVigc4M9yLwKqQLppyXj9RHO89hllm2CXMrrBZwpvgAjVk-VTe5AqxsPPcSyeJbJlFXGKHxCESPePqE4UkY3rSTy7ewtcZQ6ULC-a8EnbDx1uJ9lqBtuZrc5xeNp4EbYI1puld1-e3I&wd=&eqid=94304db3000f4ad9000000035c710bfe)之后
+
+突然举起水杯，“既然如此，答案只有一个了！”
+
+突然举起手办，“既然如此，答案只有一个了！”
+
+突然举起《算法导论》，“既然如此，答案只有一个了！”
+
+突然举起键盘，“既然如此，答案只有一个了！”
+
+突然举起我的胳膊，“既然如此，答案只有一个了！”
+
+![](/img/qaq/？？？.jpg)
+
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
