--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -747,5 +747,17 @@ $Cansult$了解了[内海折断拐杖的梗](https://www.baidu.com/link?url=XlNw
 
 ![](/img/qaq/？？？.jpg)
 
-[$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
+### $02.24$
+
+听说要参加什么高考一百天~~荔枝~~励志大会……~~所以为什么我们要去看~~
+
+复读机/自动机……
+
+你已经是个成熟的复读机了，该学会自己复读自己了
+
+你已经是个成熟的自动机了，该学会自己接上宣誓台词了
+
+原来智商最高的人最后只能去菜市场啊太真实了
+
+[$Cansult​$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
