--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -759,5 +759,9 @@ $Cansult$了解了[内海折断拐杖的梗](https://www.baidu.com/link?url=XlNw
 
 原来智商最高的人最后只能去菜市场啊太真实了
 
-[$Cansult​$的日记 比我的有意思多了](https://cansult.ga/3632.html)
+---
+
+$fuge$：二进制分组和线段树分治有什么区别吗
+
+[$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
