--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -765,5 +765,7 @@ $fuge$：二进制分组和线段树分治有什么区别吗
 
 $Asia$：难道主席树不等于动态开点线段树吗
 
+![](/img/qwq/zyf.png)
+
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
