--- a/_posts/2018-06-19-[AHOI2001]多项式乘法.md
+++ b/_posts/2018-06-19-[AHOI2001]多项式乘法.md
@@ -1,4 +1,4 @@
-﻿---
+---
 layout:     post
 title:      "[AHOI2001]多项式乘法"
 date:       2018-06-19
@@ -59,7 +59,7 @@ if(ppos == std::string::npos) continue;
 然后加上就过了QAQ这种~~垃圾~~题还是别出了QAQ
 
 ### 代码
-```
+```c++
 # include<iostream>
 # include<cstring>
 # include<cstdio>
@@ -91,10 +91,10 @@ void fft(complex *A,int tt)
 	  if(i<r[i]) swap(A[i],A[r[i]]);
 	for(int i=1;i<lim;i<<=1)
 	  {
-	  	complex w1(cos(Pi/i),tt*sin(Pi/i));
+	  	complex w1=complex(cos(Pi/i),tt*sin(Pi/i));
 		for(int l=i<<1,j=0;j<lim;j+=l)
 		  {
-	  		complex w(1,0);
+	  		complex w=complex(1,0);
 	  		for(int k=0;k<i;++k,w=w*w1)
 	  		  {
 	  		  	complex x=A[j+k],y=w*A[j+i+k];
