--- a/_posts/2018-06-20-[LUOGU4173]残缺的字符串.md
+++ b/_posts/2018-06-20-[LUOGU4173]残缺的字符串.md
@@ -165,10 +165,10 @@ void fft(complex *A,int tt)
 	  if(i<r[i]) swap(A[i],A[r[i]]);
 	for(int i=1;i<lim;i<<=1)
 	  {
-	  	complex w1(cos(Pi/i),tt*sin(Pi/i));
+	  	complex w1=complex(cos(Pi/i),tt*sin(Pi/i));
 	  	for(int l=i<<1,j=0;j<lim;j+=l)
 	  	  {
-	  	  	complex w(1,0);
+	  	  	complex w=complex(1,0);
 	  	  	for(int k=0;k<i;++k,w=w*w1)
 	  	  	  {
 	  	  	  	complex x=A[j+k],y=w*A[j+i+k];
