--- a/_posts/2019-02-25-[AH2017]礼物.md
+++ b/_posts/2019-02-25-[AH2017]礼物.md
@@ -86,8 +86,8 @@ using namespace std;
 const int MAX=4e5+5;
 const double Pi=acos(-1.0);
 struct Complex{
-    double x,y;
-    Complex(double X=0,double Y=0) {x=X,y=Y;}
+	double x,y;
+	Complex(double X=0,double Y=0) {x=X,y=Y;}
 }a[MAX],b[MAX];
 int n,m,N,M,lim=1,L;
 LL A,B,C,ans=1e18;
@@ -97,47 +97,47 @@ Complex operator- (Complex x,Complex y) {return Complex(x.x-y.x,x.y-y.y);}
 Complex operator* (Complex x,Complex y) {return Complex(x.x*y.x-x.y*y.y,x.y*y.x+x.x*y.y);}
 int read()
 {
-    int x(0);
-    char ch=getchar();
-    for(;!isdigit(ch);ch=getchar());
-    for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
-    return x;
+	int x(0);
+	char ch=getchar();
+	for(;!isdigit(ch);ch=getchar());
+	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
+	return x;
 }
 void FFT(Complex *A,int tt=1)
 {
-    for(int i=0;i<lim;++i)
-      if(i<R[i]) swap(A[i],A[R[i]]);
-    for(int i=1;i<lim;i<<=1)
-      {
-      	Complex w1(cos(Pi/i),tt*sin(Pi/i));
-      	for(int l=i<<1,j=0;j<lim;j+=l)
-      	  {
-      	  	Complex w(1,0),x,y;
-      	  	for(int k=0;k<i;++k,w=w*w1)
-      	  	  x=A[j+k],y=w*A[i+j+k],A[j+k]=x+y,A[i+j+k]=x-y;
-          }
-      }
+	for(int i=0;i<lim;++i)
+	  if(i<R[i]) swap(A[i],A[R[i]]);
+	for(int i=1;i<lim;i<<=1)
+	  {
+	  	Complex w1=Complex(cos(Pi/i),tt*sin(Pi/i));
+	  	for(int l=i<<1,j=0;j<lim;j+=l)
+	  	  {
+	  	  	Complex w=Complex(1,0),x,y;
+	  	  	for(int k=0;k<i;++k,w=w*w1)
+	  	  	  x=A[j+k],y=w*A[i+j+k],A[j+k]=x+y,A[i+j+k]=x-y;
+		  }
+	  }
 }
 int main()
 {
-    n=read(),m=read();
-    for(int i=0;i<n;++i)
-      a[i].x=a[i+n].x=read(),A+=a[i].x,B+=a[i].x*a[i].x;
-    for(int i=0;i<n;++i)
-      b[i].x=read(),A-=b[i].x,B+=b[i].x*b[i].x;
-    M=n-1,N=M+n,reverse(a,a+N+1);
-    while(lim<=N+M) lim<<=1,++L;
-    for(int i=0;i<lim;++i)
-      R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
-    FFT(a),FFT(b);
-    for(int i=0;i<=lim;++i)
-      a[i]=a[i]*b[i];
-    FFT(a,-1);
-    for(int i=n;i<N;++i)
-      C=max(C,(LL)(a[i].x/lim+0.5));
-    for(int i=-m;i<=m;++i)
-      ans=min(ans,B+2*i*A-2*C+n*i*i);
-    return printf("%lld",ans),0;
+	n=read(),m=read();
+	for(int i=0;i<n;++i)
+	  a[i].x=a[i+n].x=read(),A+=a[i].x,B+=a[i].x*a[i].x;
+	for(int i=0;i<n;++i)
+	  b[i].x=read(),A-=b[i].x,B+=b[i].x*b[i].x;
+	M=n-1,N=M+n,reverse(a,a+N+1);
+	while(lim<=N+M) lim<<=1,++L;
+	for(int i=0;i<lim;++i)
+	  R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
+	FFT(a),FFT(b);
+	for(int i=0;i<=lim;++i)
+	  a[i]=a[i]*b[i];
+	FFT(a,-1);
+	for(int i=n;i<N;++i)
+	  C=max(C,(LL)(a[i].x/lim+0.5));
+	for(int i=-m;i<=m;++i)
+	  ans=min(ans,B+2*i*A-2*C+n*i*i);
+	return printf("%lld",ans),0;
 }
 ```
 
