--- a/_posts/2019-02-25-[AH2017]礼物.md
+++ b/_posts/2019-02-25-[AH2017]礼物.md
@@ -95,14 +95,6 @@ int R[MAX];
 Complex operator+ (Complex x,Complex y) {return Complex(x.x+y.x,x.y+y.y);}
 Complex operator- (Complex x,Complex y) {return Complex(x.x-y.x,x.y-y.y);}
 Complex operator* (Complex x,Complex y) {return Complex(x.x*y.x-x.y*y.y,x.y*y.x+x.x*y.y);}
-int read()
-{
-	int x(0);
-	char ch=getchar();
-	for(;!isdigit(ch);ch=getchar());
-	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
-	return x;
-}
 void FFT(Complex *A,int tt=1)
 {
 	for(int i=0;i<lim;++i)
@@ -118,6 +110,14 @@ void FFT(Complex *A,int tt=1)
 		  }
 	  }
 }
+int read()
+{
+	int x(0);
+	char ch=getchar();
+	for(;!isdigit(ch);ch=getchar());
+	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
+	return x;
+}
 int main()
 {
 	n=read(),m=read();
@@ -125,7 +125,7 @@ int main()
 	  a[i].x=a[i+n].x=read(),A+=a[i].x,B+=a[i].x*a[i].x;
 	for(int i=0;i<n;++i)
 	  b[i].x=read(),A-=b[i].x,B+=b[i].x*b[i].x;
-	M=n-1,N=M+n,reverse(a,a+N+1);
+	M=n-1,N=M+n-1,reverse(a,a+N+2);
 	while(lim<=N+M) lim<<=1,++L;
 	for(int i=0;i<lim;++i)
 	  R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
