--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -769,5 +769,17 @@ $Asia$：难道主席树不等于动态开点线段树吗
 
 ![](/img/qwq/zyf.png)
 
+### $02.25$
+
+我和$fuge$在走廊吃晚饭
+
+我问$fuge$：周朝是谁建立的啊
+
+$fuge$一脸你以为我是错过一次还会错的$sb$么你也太小看我了的表情
+
+$fuge$：当然是禹啊
+
+
+
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
