--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -785,9 +785,9 @@ $Refun$：这大过年的就特别热闹
 
 我：哎这是真的
 
-$Refun$：一热闹就有人在微信QQ群里发红包
+$Refun$：一热闹，哎就有人在微信QQ群里发红包
 
-我：没错我还抢了不少呢
+我：没错儿我还抢了不少呢
 
 $Refun$：我抢了$11$块多，用这个钱买了俩shou chong
 
