--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -793,5 +793,19 @@ $Refun$：我抢了$11$块多，用这个钱买了俩shou chong
 
 我：好事……诶等会儿你买了俩啥？
 
+### $02.26$
+
+$fuge$：诶诶诶那个<code>nth_element</code>在哪个库里啊
+
+我：在<code>algorithm</code>里面
+
+$fuge$：你确定？我加了还是<code>CE</code>啊
+
+我：……你咋写的
+
+![](/img/qwq/eth.png)
+
+![](/img/qaq/劈叉.jpg)
+
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
