--- a/_posts/2018-06-20-[LUOGU4173]残缺的字符串.md
+++ b/_posts/2018-06-20-[LUOGU4173]残缺的字符串.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "[LUOGU4173]残缺的字符串"
+title:      "[BZOJ4259]残缺的字符串"
 date:       2018-06-20
 author:     "Dispwnl"
 header-img: "img/used/9.jpg"
@@ -9,128 +9,54 @@ tags:
     - 瞎搞
     - FFT
 ---
-> 和$xMinh$讨论这题我发现我似乎$FFT$的式子都没搞懂……？
+## [题目](https://lydsy.com/JudgeOnline/problem.php?id=4259)
+### Description
 
-## [题目](https://www.luogu.org/problemnew/show/P4173)
-### 题目描述
-很久很久以前，在你刚刚学习字符串匹配的时候，有两个仅包含小写字母的字符串$A$和$B$，其中$A$串长度为$m$，$B$串长度为$n$。可当你现在再次碰到这两个串时，这两个串已经老化了，每个串都有不同程度的残缺。
+很久很久以前，在你刚刚学习字符串匹配的时候，有两个仅包含小写字母的字符串A和B，其中A串长度为m，B串长度为n。可当你现在再次碰到这两个串时，这两个串已经老化了，每个串都有不同程度的残缺。
 
-你想对这两个串重新进行匹配，其中$A$为模板串，那么现在问题来了，请回答，对于$B$的每一个位置$i$，从这个位置开始连续$m$个字符形成的子串是否可能与$A$串完全匹配?
+你想对这两个串重新进行匹配，其中A为模板串，那么现在问题来了，请回答，对于B的每一个位置i，从这个位置开始连续m个字符形成的子串是否可能与A串完全匹配?
 
-### 输入输出格式
-#### 输入格式：
-第一行包含两个正整数$m,n$，分别表示$A$串和$B$串的长度。
+### Input
 
-第二行为一个长度为$m$的字符串$A$。
+第一行包含两个正整数m,n(1<=m<=n<=300000)，分别表示A串和B串的长度。
 
-第三行为一个长度为$n$的字符串$B$。
+第二行为一个长度为m的字符串A。
 
-两个串均仅由小写字母和'*'号组成，表示相应位置已经残缺。
+第三行为一个长度为n的字符串B。
 
-#### 输出格式：
-第一行包含一个整数$k$，表示$B$串中可以完全匹配$A$串的位置个数。
+两个串均仅由小写字母和*号组成，其中*号表示相应位置已经残缺。
 
-若$k>0$，则第二行输出$k$个正整数，从小到大依次输出每个可以匹配的开头位置（下标从$1$开始）。
+### Output
 
-### 输入输出样例
-#### 输入样例#1：
+第一行包含一个整数k，表示B串中可以完全匹配A串的位置个数。
+
+若k>0，则第二行输出k个正整数，从小到大依次输出每个可以匹配的开头位置（下标从1开始）。
+
+### Sample Input
 ```plain
 3 7
 a*b
 aebr*ob
 ```
-#### 输出样例#1： 
+### Sample Output
 ```plain
 2
 1 5
 ```
-### 说明
-100% 的数据满足$1\leq m\leq n\leq 300000$。
-
 ### 题解
 
-这题暴力能得$80$……就是最暴力的那种
+以前写的被$ban​$掉了……
+
+把<code>*</code>定义为$0$，求$\sum_{i=0}^{n}(S_{n-i+j}-T_i)^2T_iS_{n-i+j}$是否为$0$
+
+展开后就是$\sum_{i=0}^{n}{S_{n-i+j}}^3T_i+{T_i}^3S_{n-i+j}-2{T_i}^2{S_{n-i+j}}^2$
+
+$FFT$三个卷积就行了
+
+貌似有点卡精度……？
 
 ### 代码
-```
-# include<iostream>
-# include<cstring>
-# include<cstdio>
-using namespace std;
-const int MAX=3e5+1;
-int m,n;
-int A[MAX];
-string a,b;
-int main()
-{
-	cin>>m>>n>>a>>b;
-	int l1=a.length(),l2=b.length();
-	for(int i=0;i<=l2-l1;++i)
-	  {
-	  	bool fl=1;
-	  	int j=i,l=0;
-	  	while(l<l1)
-	  	if(a[l]==b[j]||a[l]=='*'||b[j]=='*') ++j,++l;
-	  	else
-	  	{
-	  		fl=0;
-	  		break;
-		}
-		if(fl) A[++A[0]]=i+1;
-	  }
-	printf("%d\n",A[0]);
-	for(int i=1;i<=A[0];++i)
-	  printf("%d ",A[i]);
-	return 0;
-}
-```
-除非你的暴力复杂度是$O(wys)$，不然肯定是卡不出$AC$的
 
-正解思路还是很妙的
-
-首先，我们发现这题难搞的原因是有```'*'```存在
-
-我们可以yy一下，假如能把两个字符串每个字符表示成数字，定两个字符串匹配相当于多项式相乘
-
-然后两个字符匹配的条件就是相乘等于一个特定的数
-
-因为```'*'```可以匹配任意字符，所以所有的字符与ta相乘值都相等
-
-可以想到：$0$乘以任何数都等于$0$
-
-所以我们可以把```'*'```定为$0$
-
-那么其他匹配成功结果应该等于什么呢？
-
-这个结果得存在一个性质，满足每个匹配成功结果累计（因为是数字所以就是相加）都满足这个性质，并且只要有一个不匹配都会破坏这个性质
-
-因为```'*'```都定为$0$了，所以可以把成功匹配的结果定为一个整数，不匹配为小数，整数加整数还是整数，整数加小数是小数
-
-好了，这样匹配的方式定了，那匹配的顺序呢？
-
-一次匹配是像这样（后面省略了）：
-![](/img/study/canque.png)
-
-图中两条线段是两个字符串
-
-假设匹配都还是从左向右一位一位匹配，发现是不行的，因为每一位匹配出来的指数不同，无法相加
-
-所以我们倒着匹配，把$A$倒过来：
-![](/img/study/canque2.png)
-
-这样匹配就行了，相乘的结果指数相同了
-
-所以$F(i)=\sum_{j=0}^{i}a_i\times b_{i-j}$
-
-$FFT$的式子就出来啦（下标从$0$开始）……$F(i)$表示$B$中以$i$为结尾的前$m$项匹配结果
-
-$a$中下标大于$m-1$的项都等于$0$，所以对结果无影响
-
-最后$F(i)$的$m-1$到$n-1$项就是匹配的结果
-
-
-好了现在这份代码过不了了![](/img/qaq/fish.gif)
-### 代码
 ```c++
 # include<iostream>
 # include<cstring>
@@ -138,79 +64,79 @@ $a$中下标大于$m-1$的项都等于$0$，所以对结果无影响
 # include<cmath>
 # include<algorithm>
 using namespace std;
-const int MAX=2e6+1,MAXN=3e5+1;
+const int MAX=1.2e6+5;
 const double Pi=acos(-1.0);
-struct complex{
+struct Complex{
 	double x,y;
-	complex(double X=0,double Y=0){x=X,y=Y;}
+	Complex(double X=0,double Y=0) {x=X,y=Y;}
 }a[MAX],b[MAX];
-int n,m,l,lim=1;
-int r[MAX],ans[MAXN];
-string A,B;
-complex operator+ (complex x,complex y)
-{
-	return complex(x.x+y.x,x.y+y.y);
-}
-complex operator- (complex x,complex y)
-{
-	return complex(x.x-y.x,x.y-y.y);
-}
-complex operator* (complex x,complex y)
-{
-	return complex(x.x*y.x-x.y*y.y,x.x*y.y+x.y*y.x);
-}
-void fft(complex *A,int tt)
+int n,m,lim=1,L,ans;
+int R[MAX],id[MAX];
+double val[MAX];
+char A[MAX],B[MAX];
+Complex operator+ (Complex x,Complex y) {return Complex(x.x+y.x,x.y+y.y);}
+Complex operator- (Complex x,Complex y) {return Complex(x.x-y.x,x.y-y.y);}
+Complex operator* (Complex x,Complex y) {return Complex(x.x*y.x-x.y*y.y,x.y*y.x+x.x*y.y);}
+void FFT(Complex *A,int tt=1)
 {
 	for(int i=0;i<lim;++i)
-	  if(i<r[i]) swap(A[i],A[r[i]]);
+	  if(i<R[i]) swap(A[i],A[R[i]]);
 	for(int i=1;i<lim;i<<=1)
 	  {
-	  	complex w1=complex(cos(Pi/i),tt*sin(Pi/i));
+	  	Complex w1=Complex(cos(Pi/i),tt*sin(Pi/i));
 	  	for(int l=i<<1,j=0;j<lim;j+=l)
 	  	  {
-	  	  	complex w=complex(1,0);
+	  	  	Complex w=Complex(1,0),x,y;
 	  	  	for(int k=0;k<i;++k,w=w*w1)
-	  	  	  {
-	  	  	  	complex x=A[j+k],y=w*A[j+i+k];
-	  	  	  	A[j+k]=x+y,A[j+i+k]=x-y;
-			  }
+	  	  	  x=A[j+k],y=w*A[i+j+k],A[j+k]=x+y,A[i+j+k]=x-y;
 		  }
 	  }
-	if(tt==-1)
-	for(int i=0;i<lim;++i)
-	  A[i].x/=(double)lim;
-}
-string Read()
-{
-	string a="";
-	char ch=getchar();
-	for(;(ch<'a'||ch>'z')&&ch!='*';ch=getchar());
-	for(;(ch>='a'&&ch<='z')||ch=='*';a+=ch,ch=getchar());
-	return a;
 }
 int main()
 {
-	scanf("%d%d",&m,&n);
-	A=Read(),B=Read();
-	for(int i=0;i<m;++i)
-	  if(A[i]!='*') b[m-i-1].x=1.0/(double)(1e4+A[i]-'a'+1);
+	scanf("%d%d%s%s",&n,&m,A,B);
+	reverse(A,A+n);
+	while(lim<=n+m-2) lim<<=1,++L;
+	for(int i=0;i<=lim;++i)
+	  R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
 	for(int i=0;i<n;++i)
-	  if(B[i]!='*') a[i].x=1e4+B[i]-'a'+1;
-	while(lim<=n+m-2) lim<<=1,++l;
-	for(int i=0;i<lim;++i)
-	  r[i]=(r[i>>1]>>1)|((i&1)<<(l-1));
-	fft(a,1),fft(b,1);
+	  if(A[i]!='*') a[i].x=(A[i]-'a'+1);
+	for(int i=0;i<m;++i)
+	  if(B[i]!='*') b[i].x=(B[i]-'a'+1)*(B[i]-'a'+1)*(B[i]-'a'+1);
+	FFT(a),FFT(b);
 	for(int i=0;i<=lim;++i)
 	  a[i]=a[i]*b[i];
-	fft(a,-1);
-	for(int i=m-1;i<=n-1;++i)
-	  {
-	  	int tt=a[i].x+0.5;
-	  	if(abs(a[i].x-tt)<=1e-6) ans[++ans[0]]=i-m+2;
-	  }
-	printf("%d\n",ans[0]);
-	for(int i=1;i<=ans[0];++i)
-	  printf("%d ",ans[i]);
+	FFT(a,-1);
+	for(int i=n-1,j=0;i<=m-1;++i,++j)
+	  val[j]+=a[i].x;
+	for(int i=0;i<=lim;++i)
+	  a[i]=b[i]=Complex(0,0);
+	for(int i=0;i<n;++i)
+	  if(A[i]!='*') a[i].x=(A[i]-'a'+1)*(A[i]-'a'+1)*(A[i]-'a'+1);
+	for(int i=0;i<m;++i)
+	  if(B[i]!='*') b[i].x=(B[i]-'a'+1);
+	FFT(a),FFT(b);
+	for(int i=0;i<=lim;++i)
+	  a[i]=a[i]*b[i];
+	FFT(a,-1);
+	for(int i=n-1,j=0;i<=m-1;++i,++j)
+	  val[j]+=a[i].x;
+	for(int i=0;i<=lim;++i)
+	  a[i]=b[i]=Complex(0,0);
+	for(int i=0;i<n;++i)
+	  if(A[i]!='*') a[i].x=(A[i]-'a'+1)*(A[i]-'a'+1);
+	for(int i=0;i<m;++i)
+	  if(B[i]!='*') b[i].x=(B[i]-'a'+1)*(B[i]-'a'+1);
+	FFT(a),FFT(b);
+	for(int i=0;i<=lim;++i)
+	  a[i]=a[i]*b[i];
+	FFT(a,-1);
+	for(int i=n-1,j=0;i<=m-1;++i,++j)
+	  if(int((val[j]-2*a[i].x)/lim+0.5)==0) id[++ans]=j;
+	printf("%d\n",ans);
+	for(int i=1;i<=ans;++i)
+	  printf("%d ",id[i]+1);
 	return 0;
 }
 ```
+
