--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -807,5 +807,11 @@ $fuge$：你确定？我加了还是<code>CE</code>啊
 
 ![](/img/qaq/劈叉.jpg)
 
+---
+
+我问$Asia$：并查集英文是啥
+
+$Asia$不假思索：$BCJ$
+
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
