--- a/_posts/2019-02-26-后缀自动机总结.md
+++ b/_posts/2019-02-26-后缀自动机总结.md
@@ -1,6 +1,6 @@
 ---
 layout:		post
-title:		"后缀自动机总结"
+title:		"后缀自动机略解"
 date:		2019-02-26
 author:		"Dispwnl"
 header-img:	"img/used/89800.jpg"
@@ -12,7 +12,7 @@ tags:
 
 $SAM​$学过一段时间了，本来想写一点总结的，结果一直咕咕咕咕咕咕咕咕咕到了现在……
 
-### 关于概念
+### 概念和构造
 
 #### 关于$right$集合
 
@@ -60,7 +60,7 @@ $SAM$是在线构造的，依次把字符串$a$的每个字符往里面塞
 
 ~~哎呀讲构造真是烦死~~
 
-现在要加入一个字符$c$，这里肯定形成了新的$right$集合，最后位置（没加$c$）的状态$a$能通过加$c$转移到新状态$b$，有$son_{a,c}=b​$
+现在要加入一个字符$c$，设前面加入字符形成的字符串为$S$，这里肯定形成了新的$right$集合，$S$的状态$a$能通过加$c$转移到新状态$b$，有$son_{a,c}=b$
 
 上面说了
 
@@ -72,6 +72,15 @@ $SAM$是在线构造的，依次把字符串$a$的每个字符往里面塞
 
 跳跳跳到根了！恭喜你没有遇到冲突，成功添加了一个点
 
-跳跳跳到$u​$，但是$v=son_{u,c}​$已经存在了，这时候如果有$lmax_v=lmax_u+1​$，说明转移到新状态$b​$的子串加上$c​$也能转移到$v​$，$v​$的$right​$集合更大，所以$v​$为$b​$在$Parent​$树上的父亲
+跳跳跳到$u$，但是$v=son_{u,c}$已经存在了，这时候如果有$lmax_v=lmax_u+1$，说明$S$加上$c$也能转移到$v$，$v$的$right$集合更大，所以$v$为$b$在$Parent$树上的父亲
 
-这时候如果有$lmax_v>lmax_u+1$，这时候不能强插（具体原因不说了烦死），于是再新建一个节点$v'$，有$lmax_{v'}=lmax_u+1$，这里相当于两个状态，转移到新状态$b$的子串加$c$和$lmax_x$
+这时候如果有$lmax_v>lmax_u+1$，这时候不能强插（具体原因不说了烦死），于是再新建一个节点$v'$，有$lmax_{v'}=lmax_u+1$，这里相当于两个状态，$S$加$c$后缀对应状态和$lmax_u+1$对应的状态，前面状态对应串较长，对应子串较少，所以$Parent_v=Parent_b=v'$，再把祖先的$v$都替换成$v'$
+
+~~差不多这个意思吧背过板子就行了~~
+
+### 一些常用用法
+
+#### 求本质不同的子串个数
+
+本质相同的子串肯定属于一个$right$并且长度相等，所以答案就是$\sum right\times (lmax-lmin+1)$
+
