--- a/_posts/2019-02-26-后缀自动机总结.md
+++ b/_posts/2019-02-26-后缀自动机总结.md
@@ -10,7 +10,9 @@ tags:
     - 整理
 ---
 
-$SAM​$学过一段时间了，本来想写一点总结的，结果一直咕咕咕咕咕咕咕咕咕到了现在……
+$SAM$学过一段时间了，本来想写一点总结的，结果一直咕咕咕咕咕咕咕咕咕到了现在……
+
+---
 
 ### 概念和构造
 
@@ -78,6 +80,8 @@ $SAM$是在线构造的，依次把字符串$a$的每个字符往里面塞
 
 ~~差不多这个意思吧背过板子就行了~~
 
+---
+
 ### 一些常用操作
 
 #### 求$right$集合大小
@@ -108,6 +112,8 @@ $k$小同理
 
 还有啥其他玩意想起来再补~~咕咕咕预警~~
 
+---
+
 ### 关于与线段树合并结合
 
 $SAM$和线段树合并结合~~乱搞~~是常见套路
@@ -119,6 +125,8 @@ $SAM$和线段树合并结合~~乱搞~~是常见套路
 然后就可以判断一段子串是否属于某个区间了
 
 ~~去做几道题体会一下吧~~
+
+---
 
 ### 关于与其他乱七八糟的东西结合
 
