--- a/_posts/2019-02-27-[CF1045G]AI robots.md
+++ b/_posts/2019-02-27-[CF1045G]AI robots.md
@@ -88,7 +88,7 @@ int read()
 void Solve(int l=1,int r=n)
 {
 	if(l==r) return;
-	int mid(l+r>>1),_L=mid+1,_R=mid+1;
+	int mid=(l+r>>1),_L=mid+1,_R=mid+1;
 	Solve(l,mid),Solve(mid+1,r);
 	for(int i=l;i<=r;++i)
 	  id[i]=_id[i];
