--- a/_posts/2018-03-14-有上下界的网络流略解.md
+++ b/_posts/2018-03-14-有上下界的网络流略解.md
@@ -9,7 +9,7 @@ tags:
     - 网络流
     - 整理
 ---
-有上下界的网络流就是每条边都有一个$down$和$up$，然后流量$flow$必须满足$down\leqslant flow\leqslant up$
+有上下界的网络流就是每条边都有一个$down$和$up$，然后流量$flow$必须满足$down\le flow\le up$
 
 一般类型分为两种
 
